# parakeet-tdt-0.6b-v2-fastapi

./: .dstack-cpu.yml  .dstack-registry.yml  .dstack.yml  .env.canary.example  BUILD_AND_DEPLOY.md  DEPLOYMENT.md  DEV_ENVIRONMENT.md  DSTACK_WORKFLOWS.md  Dockerfile  Dockerfile.canary  Dockerfile.dev  Dockerfile.gpu  README.md  STREAMING.md  STREAMING_COMPARISON.md  TESTING.md  benchmark_canary.py  benchmark_timestamps.py  build-dev-image.sh  canary.dstack.yml  depot.json  dev-image.dstack.yml  dev.dstack.yml  docker-compose.gpu.yml  docker-compose.yml  fleet.dstack.yml  livekit_plugin.py  locustfile.py  locustfile_callcenter.py  locustfile_multipart.py  locustfile_raw.py  locustfile_raw_ts.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_canary_client.py  test_microphone.py  test_streaming_client.py
asr_service/: audio.py  config.py  main.py
asr_service/backends/: base.py
asr_service/backends/canary/: _fast_copy.c  backend.py  config.py  direct_batcher.py  model.py  optimizations.py
asr_service/backends/qwen3/: backend.py  config.py  engine.py
benchmark/: METHODOLOGY.md  SETUP.md  locustfile_openai.py
canary_service/: _fast_copy.c  batcher.py  direct_batcher.py  main.py  model.py  optimizations.py  streaming_server.py
parakeet_service/: config.py  install_ffmpeg.sh  main.py  model.py  streaming_server.py  streaming_server_vad.py
results/: asr_callcenter_summary.json  callcenter_sweep_u1000_failures.csv  callcenter_sweep_u1000_stats.csv  callcenter_sweep_u1000_stats_history.csv  callcenter_sweep_u1500_failures.csv  callcenter_sweep_u1500_stats.csv  callcenter_sweep_u1500_stats_history.csv  callcenter_sweep_u2000_failures.csv  callcenter_sweep_u2000_stats.csv  callcenter_sweep_u2000_stats_history.csv  callcenter_sweep_u3000_failures.csv  callcenter_sweep_u3000_stats.csv  callcenter_sweep_u3000_stats_history.csv  callcenter_sweep_u5000_failures.csv  callcenter_sweep_u5000_stats.csv  callcenter_sweep_u5000_stats_history.csv  callcenter_u1500_failures.csv  callcenter_u1500_stats.csv  callcenter_u1500_stats_history.csv  callcenter_u2000_failures.csv  callcenter_u2000_stats.csv  callcenter_u2000_stats_history.csv  callcenter_u3000_failures.csv  callcenter_u3000_stats.csv  callcenter_u3000_stats_history.csv  callcenter_u5000_failures.csv  callcenter_u5000_stats.csv  callcenter_u5000_stats_history.csv  greedy_h100.csv  greedy_l40s.csv  raw_off_u128_stats.csv  raw_off_u128_stats_history.csv  raw_off_u16_stats.csv  raw_off_u16_stats_history.csv  raw_off_u256_stats.csv  raw_off_u256_stats_history.csv  raw_off_u32_stats.csv  raw_off_u32_stats_history.csv  raw_off_u512_stats.csv  raw_off_u512_stats_history.csv  (+2 more)
results/h100_multipart_noTS/: u128_stats.csv  u128_stats_history.csv  u16_stats.csv  u16_stats_history.csv  u256_stats.csv  u256_stats_history.csv  u32_stats.csv  u32_stats_history.csv  u512_stats.csv  u512_stats_history.csv  u64_stats.csv  u64_stats_history.csv
results/h100_raw_noTS/: u128_stats.csv  u128_stats_history.csv  u16_stats.csv  u16_stats_history.csv  u256_stats.csv  u256_stats_history.csv  u32_stats.csv  u32_stats_history.csv  u512_stats.csv  u512_stats_history.csv  u64_stats.csv  u64_stats_history.csv
results/h100_raw_noTS_tf32/: u128_stats.csv  u128_stats_history.csv  u16_stats.csv  u16_stats_history.csv  u256_stats.csv  u256_stats_history.csv  u32_stats.csv  u32_stats_history.csv  u512_stats.csv  u512_stats_history.csv  u64_stats.csv  u64_stats_history.csv
results/h100_raw_noTS_tf32_causal/: u128_stats.csv  u128_stats_history.csv  u16_stats.csv  u16_stats_history.csv  u256_stats.csv  u256_stats_history.csv  u512_stats.csv  u512_stats_history.csv  u64_stats.csv  u64_stats_history.csv
results/h100_self_kv_buffer/: u128_stats.csv  u128_stats_history.csv  u16_stats.csv  u16_stats_history.csv  u256_stats.csv  u256_stats_history.csv  u512_stats.csv  u512_stats_history.csv  u64_stats.csv  u64_stats_history.csv
results/multipart_noTS/: u128_stats.csv  u128_stats_history.csv  u16_stats.csv  u16_stats_history.csv  u256_stats.csv  u256_stats_history.csv  u32_stats.csv  u32_stats_history.csv  u512_stats.csv  u512_stats_history.csv  u64_stats.csv  u64_stats_history.csv
tests/: __init__.py  conftest.py  test_config.yml  test_integration.py  test_remote.py  test_sanity.py
