[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parakeet-tdt-streaming-stt"
version = "1.0.0"
description = "Low-latency streaming speech-to-text using NVIDIA Parakeet-TDT for LiveKit agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["speech-to-text", "stt", "asr", "livekit", "nvidia", "parakeet", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.24.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "pydantic>=2.0.0",
    "omegaconf>=2.3.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "websockets>=11.0.0",
    "soundfile>=0.12.1",
    "nemo_toolkit[asr]>=1.23.0",
    "ml-dtypes>=0.5.0",  # Required for ONNX compatibility with NeMo
    "cuda-python>=12.1.0,<12.2.0",
    # VAD for accurate utterance detection (loaded via torch.hub)
    # No explicit package needed - torch.hub downloads on first use
]

[project.optional-dependencies]
# LiveKit agents integration
livekit = [
    "livekit-agents>=0.8.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-sugar>=0.9.7",
    "pytest-html>=3.2.0",
    "aiohttp>=3.8.0",
    "sounddevice>=0.4.6",
    "pyyaml>=6.0",
]

# Development dependencies
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

# All optional dependencies
all = [
    "livekit-agents>=0.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-sugar>=0.9.7",
    "pytest-html>=3.2.0",
    "aiohttp>=3.8.0",
    "sounddevice>=0.4.6",
    "pyyaml>=6.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/tomheno/parakeet-tdt-0.6b-v2-fastapi"
Documentation = "https://github.com/tomheno/parakeet-tdt-0.6b-v2-fastapi#readme"
Repository = "https://github.com/tomheno/parakeet-tdt-0.6b-v2-fastapi"
Issues = "https://github.com/tomheno/parakeet-tdt-0.6b-v2-fastapi/issues"

[project.scripts]
parakeet-server = "parakeet_service.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-ra",
]
markers = [
    "sanity: Quick sanity tests without model or server",
    "integration: Integration tests requiring running server",
    "remote: Tests for remote (dstack) endpoints",
    "slow: Tests that take a long time to run",
]
asyncio_mode = "auto"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["parakeet_service"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B008"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "nemo.*",
    "omegaconf.*",
    "soundfile.*",
    "sounddevice.*",
    "livekit.*",
]
ignore_missing_imports = true

# UV configuration for PyTorch with CUDA
[tool.uv]
# Register PyTorch CUDA index
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Specify where to get PyTorch packages
[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

# Hatchling build configuration
[tool.hatch.build.targets.wheel]
packages = ["parakeet_service"]
